--- a/main.css
+++ b/main.css
@@ -8,6 +8,16 @@ img{
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
+  margin: auto;
+}
+
+.footer {
+  background-color: #0099cc;
+  color: #ffffff;
+  text-align: center;
+  font-size: 12px;
+  padding: 15px;
 }
 
 /* Float four columns side by side */
@@ -32,6 +42,17 @@ body {
   background-color: #9933cc;
   color: #ffffff;
   padding: 15px;
+  margin-top: 1%;
+}
+
+.background {
+  background: url(bg.jpg) no-repeat 50% fixed / cover;
+  width: 100%;
+  height: 90vh;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 textarea{
@@ -59,7 +80,7 @@ textarea{
 .header {
   background-color: #fff;
   box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-  position: fixed;
+  /* position: fixed; */
   width: 100%;
   z-index: 3;
 }
@@ -159,7 +180,7 @@ textarea{
   top: 0;
 }
 
-@media (min-width: 48em) {
+@media (min-width: 600px) {
   .header li {
     float: left;
   }
