--- a/main.css
+++ b/main.css
@@ -46,9 +46,9 @@ body {
 }
 
 .background {
-  background: url(bg.jpg) no-repeat 50% fixed / cover;
+  background: url(https://wallpaperaccess.com/full/36414.jpg) no-repeat 50% fixed / cover;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -74,11 +74,11 @@ textarea{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 16px;
   text-align: center;
-  background-color: #f1f1f1;
+  /* background-color: #f1f1f1; */
 }
 
 .header {
-  background-color: #fff;
+  /* background-color: #fff; */
   box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
   /* position: fixed; */
   width: 100%;
@@ -90,13 +90,13 @@ textarea{
   padding: 0;
   list-style: none;
   overflow: hidden;
-  background-color: #fff;
+  /* background-color: #fff; */
 }
 
 .header li a {
   display: block;
   padding: 20px 20px;
-  border-right: 1px solid #f4f4f4;
+  /* border-right: 1px solid #f4f4f4; */
   text-decoration: none;
 }
 
