--- a/main.css
+++ b/main.css
@@ -2,15 +2,27 @@ img{
   height:100%;
 }
 
+.twoColumn {
+  float: left;
+  width: 50%;
+}
+
+/* Clear floats after the columns */
+.oneRow:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 * {
   box-sizing: border-box;
 }
 
-body {
+/* body {
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
   margin: auto;
-}
+} */
 
 .footer {
   background-color: #0099cc;
@@ -74,13 +86,14 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 16px;
   text-align: center;
-  /* background-color: #f1f1f1; */
+  border-radius: 3%;
+  background-color: #f1f1f1;
 }
 
 .header {
   /* background-color: #fff; */
   box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-  /* position: fixed; */
+  position: fixed;
   width: 100%;
   z-index: 3;
 }
