--- a/main.css
+++ b/main.css
@@ -1,10 +1,12 @@
 img{
-  height:100%;
+  width: 100%;
+  height: 50vh;
 }
 
 .twoColumn {
-  float: left;
-  width: 50%;
+  margin-top: 10%;
+  margin-right: 5%;
+  float: right;
 }
 
 /* Clear floats after the columns */
@@ -35,7 +37,9 @@ img{
 /* Float four columns side by side */
 .column {
   float: left;
-  width: 25%;
+    margin-top: 10%;
+      margin-left: 4%;
+  /* width: 25%; */
   padding: 0 10px;
 }
 
@@ -84,7 +88,7 @@ img{
 /* Style the counter cards */
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 16px;
+  padding: 6px;
   text-align: center;
   border-radius: 3%;
   background-color: #f1f1f1;
