--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ img{
 .column {
   float: left;
     margin-top: 10%;
-      margin-left: 4%;
+      /* margin-left: 4%; */
   /* width: 25%; */
   padding: 0 10px;
 }
