--- a/main.css
+++ b/main.css
@@ -61,7 +61,7 @@ img{
   margin-top: 1%;
 }
 
-.background {
+/* .background {
   background: url(https://wallpaperaccess.com/full/36414.jpg) no-repeat 50% fixed / cover;
   width: 100%;
   height: 100vh;
@@ -69,8 +69,17 @@ img{
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
-}
+} */
 
+body {
+  background: url(https://wallpaperaccess.com/full/36414.jpg) no-repeat 50% fixed / cover;
+  /* width: 100%; */
+  /* height: 100vh; */
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+}
 /* textarea{
   resize: none;
 } */
