--- a/philosophie.css
+++ b/philosophie.css
@@ -27,7 +27,7 @@ img{
 } */
 
 .footer {
-  background-color: rgba(0, 0, 0, 0.3);;
+  /* background-color: rgba(0, 0, 0, 0.3); */
   color: #ffffff;
   text-align: center;
   /* font-size: 12px; */
@@ -264,13 +264,24 @@ input[type=submit]:hover {
 }
 
 /* Create two columns that float next to eachother */
-.column {
+/* .column {
   float: left;
   width: 50%;
   margin-top: 3%;
-  margin-bottom:6%; 
+  margin-bottom:5%;
   padding: 20px;
+} */
+
+.column{
+  float: left;
+  height: 60vh;
+  width: 50%;
+  margin-top: 3%;
+  margin-bottom: 5%;
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.52);
 }
+
 
 /* Clear floats after the columns */
 .row:after {
