--- a/philosophie.css
+++ b/philosophie.css
@@ -59,7 +59,7 @@ img{
   clear: both;
 }
 .headline {
-  background-color: #9933cc;
+  /* background-color: #9933cc; */
   color: #ffffff;
   padding: 15px;
   margin-top: 1%;
@@ -128,6 +128,7 @@ body {
   padding: 20px 20px;
   /* border-right: 1px solid #f4f4f4; */
   text-decoration: none;
+      color: #000;
 }
 
 .header li a:hover {
