--- a/main.css
+++ b/main.css
@@ -40,8 +40,20 @@ img{
     margin-top: 10%;
       /* margin-left: 4%; */
   /* width: 25%; */
+  margin-top:3%;
+  margin-bottom: 5%;
   padding: 0 10px;
 }
+/*
+.column {
+    float: left;
+    height: 60vh;
+    width: 50%;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.52);
+} */
 
 /* Remove extra left and right margins, due to padding */
 .row {
@@ -123,7 +135,7 @@ body {
 .header li a {
   display: block;
   margin: 2%;
-  padding: 20px 20px;
+  padding: 7px 15px;
   border-style: groove;
   border-radius: 10px;
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -220,7 +232,7 @@ body {
     float: left;
   }
   .header li a {
-    padding: 20px 30px;
+    padding: 7px 15px;
   }
   .header .menu {
     clear: none;
@@ -276,7 +288,7 @@ input[type=submit]:hover {
 .column {
   float: left;
   width: 50%;
-  margin-top: 6px;
+  margin-top: 6%;
   padding: 20px;
 }
 
