--- a/philosophie.css
+++ b/philosophie.css
@@ -6,19 +6,19 @@ img{
   width: 100%;
   height: 50vh;
 }
-
+/*
 .twoColumn {
   margin-top: 10%;
   margin-right: 5%;
   float: right;
-}
+} */
 
 /* Clear floats after the columns */
-.oneRow:after {
+/* .oneRow:after {
   content: "";
   display: table;
   clear: both;
-}
+} */
 
 * {
   box-sizing: border-box;
