--- a/main.css
+++ b/main.css
@@ -1,20 +1,21 @@
+
 img{
   width: 100%;
   height: 50vh;
 }
 
-.twoColumn {
+/* .twoColumn {
   margin-top: 10%;
   margin-right: 5%;
   float: right;
-}
+} */
 
 /* Clear floats after the columns */
-.oneRow:after {
+/* .oneRow:after {
   content: "";
   display: table;
   clear: both;
-}
+} */
 
 * {
   box-sizing: border-box;
@@ -35,15 +36,15 @@ img{
 }
 
 /* Float four columns side by side */
-.column {
+/* .column {
   float: left;
-    margin-top: 10%;
+  margin-top: 10%; */
       /* margin-left: 4%; */
   /* width: 25%; */
-  margin-top:3%;
-  margin-bottom: 5%;
-  padding: 0 10px;
-}
+  /* margin-top:3%;
+  margin-bottom: 5%; */
+  /* padding: 0 10px;
+} */
 /*
 .column {
     float: left;
@@ -289,6 +290,7 @@ input[type=submit]:hover {
   float: left;
   width: 50%;
   margin-top: 6%;
+  margin-bottom:5%;
   padding: 20px;
 }
 
