--- a/main.css
+++ b/main.css
@@ -306,6 +306,6 @@ make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   .column, input[type=submit] {
     width: 100%;
-    margin-top: 0;
+    margin-top: 5%;
   }
 }
