--- a/main.css
+++ b/main.css
@@ -83,6 +83,9 @@ img{
   background-size: cover;
   background-attachment: fixed;
 } */
+.background{
+  opacity: 0.4;
+}
 
 body {
   background: url(https://wallpaperaccess.com/full/36414.jpg) no-repeat 50% fixed / cover;
