--- a/main.css
+++ b/main.css
@@ -83,11 +83,13 @@ img{
   background-size: cover;
   background-attachment: fixed;
 } */
-.background{
-  opacity: 0.4;
+
+body{
+    margin: 0px;
+    overflow-x: hidden;
 }
 
-body {
+.background{
   background: url(https://wallpaperaccess.com/full/36414.jpg) no-repeat 50% fixed / cover;
   /* width: 100%; */
   /* height: 100vh; */
@@ -95,7 +97,22 @@ body {
   background-position: center center;
   background-size: cover;
   background-attachment: fixed;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  z-index: -2;
 }
+
+/* body {
+  background: url(https://wallpaperaccess.com/full/36414.jpg) no-repeat 50% fixed / cover; */
+  /* width: 100%; */
+  /* height: 100vh; */
+  /* background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+} */
+
 /* textarea{
   resize: none;
 } */
@@ -147,6 +164,7 @@ body {
   text-decoration: none;
   color: #000;
   font-family: 'Rock Salt', cursive;
+  background-color: rgba(0,0,0,0.1);
 }
 
 .header li a:hover {
