--- a/main.css
+++ b/main.css
@@ -1,21 +1,30 @@
 #overlap {
-  font-size: 40;
+  font-size: 40px;
   position: absolute;
   z-index: 4;
   right: 350px;
-  bottom: 200px;
+  bottom: 100px;
   background-color: rgba(0, 0, 0, 0.3);
   padding: 3%;
-  margin-right:
-  font-size: 30px;
   font-family: 'Dekko', cursive;
   color: #fff;
-  font-size: 25px;
+  animation: mymove 20s infinite;
+  animation-delay: 2s;
+}
+
+@keyframes mymove {
+  from {right: 10px;}
+  to {right: 500px;}
+}
+
+.bgimg{
+  margin-left: 5%;
 }
 
 img{
-  width: 100%;
-  height: 70vh;
+  /* margin-left: 30%; */
+  /* width: 60%; */
+  height: 75vh;
 }
 
 /* .twoColumn {
@@ -43,7 +52,9 @@ img{
 
 .footer {
   /* background-color: rgba(0, 0, 0, 0.3); */
-  color: #ffffff;
+  font-family: 'Dekko', cursive;
+  color: #fff;
+  font-size: 15px;
   text-align: center;
   /* font-size: 12px; */
   padding: 15px;
@@ -127,29 +138,7 @@ body{
   background-attachment: fixed;
 } */
 
-/* Responsive columns */
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-    display: block;
-    margin-bottom: 6%;
-    margin-top: 6%
-  }
 
-  #overlap {
-    font-size: 40;
-    position: absolute;
-    z-index: 4;
-    right: 1px;
-      bottom: 200px;
-    background-color: rgba(0, 0, 0, 0.3);
-    padding: 5%;
-    margin-right:
-    font-size: 30px;
-    font-family: 'Dekko', cursive;
-    color: #fff;
-  }
-}
 
 /* Style the counter cards */
 .card {
@@ -336,15 +325,19 @@ input[type=submit]:hover {
   width: 50%;
   margin-top: 10%;
   margin-bottom:5%;
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .bg{
   background-color: rgba(0, 0, 0, 0.3);
-  color:#fff;
+  font-family: 'Dekko', cursive;
+  color: #fff;
+  font-size: 18px;
   margin-top:20%;
-  /* position: absolute;
-  top:100; */
+  position: relative;
+    left: 150px;
+    bottom: 50px;
 }
 
 .kontaktColumn {
@@ -372,6 +365,54 @@ make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
   .column, input[type=submit] {
     width: 100%;
-    margin-top: 5%;
+    margin-top: 17%;
   }
+
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    /* margin-bottom: 6%; */
+    margin-top: 17%;
+  }
+
+  #overlap {
+    font-size: 40;
+    position: absolute;
+    z-index: 4;
+    right: 1px;
+      bottom: 200px;
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 5%;
+    margin-right:
+    /* font-size: 30px; */
+    font-family: 'Dekko', cursive;
+    color: #fff;
+    font-size: 25px;
+    animation: mymove 20s infinite;
+    animation-delay: 2s;
+  }
+
+  img {
+    /* margin-right: 3%; */
+    width: 100%;
+    /* height: 75vh; */
+}
+
+.bgimg{
+  margin-left: 0%;
+}
+
+.bg{
+  background-color: rgba(0, 0, 0, 0.3);
+  font-family: 'Dekko', cursive;
+  color: #fff;
+  font-size: 18px;
+  margin-top:20%;
+    position: unset;
+}
+
 }
