--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+
+h2{
+  font-size: 30px;
+}
+
 #overlap {
   font-size: 40px;
   position: absolute;
@@ -8,13 +13,13 @@
   padding: 3%;
   font-family: 'Dekko', cursive;
   color: #fff;
-  animation: mymove 20s infinite;
+  animation: mymove 15s infinite;
   animation-delay: 2s;
 }
 
 @keyframes mymove {
-  from {right: 10px;}
-  to {right: 500px;}
+  from {right: 0px;}
+  to {leftt: 200px;}
 }
 
 .bgimg{
@@ -23,7 +28,7 @@
 
 img{
   /* margin-left: 30%; */
-  /* width: 60%; */
+  width: 95%;
   height: 75vh;
 }
 
@@ -325,7 +330,7 @@ input[type=submit]:hover {
   width: 50%;
   margin-top: 10%;
   margin-bottom:5%;
-  padding-left: 20px;
+  padding-left: 25px;
   padding-right: 20px;
 }
 
@@ -343,19 +348,24 @@ input[type=submit]:hover {
 .kontaktColumn {
   float: left;
   width: 50%;
-  margin-top: 10%;
+  /* margin-top: 13%; */
   /* margin-bottom:5%; */
   /* padding: 20px; */
   font-family: 'Dekko', cursive;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: white;
+  /* position: relative;
+  left: 60px;
+  top: 50px; */
 
 }
+
 .kontaktColumn a {
-  display: block;
+  /* display: block; */
   /* border-right: 1px solid #f4f4f4; */
   text-decoration: none;
-  color: Darkred;
+  color: #f1c8ab;
   font-family: 'Dekko', cursive;
-  /* background-color: rgba(0,0,0,0.1); */
 }
 
 .kontaktColumn a:hover {
@@ -388,11 +398,27 @@ make the two columns stack on top of each other instead of next to each other */
 
 /* Responsive columns */
 @media screen and (max-width: 600px) {
+  h2{
+    font-size: 30px;
+  }
+
   .column {
     width: 100%;
     display: block;
     /* margin-bottom: 6%; */
-    margin-top: 17%;
+    margin-top: 30%;
+  }
+
+  .kontaktColumn {
+    float: left;
+    /* width: 50%; */
+    /* margin-top: 13%; */
+    /* margin-bottom:5%; */
+    /* padding: 20px; */
+    font-family: 'Dekko', cursive;
+    /* background-color: rgba(0, 0, 0, 0.3); */
+    color:white;
+    text-decoration: none;
   }
 
   #overlap {
@@ -415,7 +441,7 @@ make the two columns stack on top of each other instead of next to each other */
   img {
     /* margin-right: 3%; */
     width: 100%;
-    /* height: 75vh; */
+    height: 60vh;
 }
 
 .bgimg{
@@ -430,5 +456,21 @@ make the two columns stack on top of each other instead of next to each other */
   margin-top:20%;
     position: unset;
 }
+
+.kontaktColumn a {
+  /* display: block; */
+  /* border-right: 1px solid #f4f4f4; */
+  text-decoration: none;
+  color: #f1c8ab;
+  font-family: 'Dekko', cursive;
+  /* background-color: rgba(0,0,0,0.1); */
+}
+
+.kontaktColumn a:hover {
+  /* background-color: #f4f4f4; */
+  /* background-color: rgba(125, 65, 14, 0.3); */
+  color: #fff;
+}
+
 
 }
