--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@ h2{
   color: #fff;
   animation: mymove 15s infinite;
   animation-delay: 2s;
+  text-align: center;
 }
 
 @keyframes mymove {
@@ -32,28 +33,13 @@ img{
   height: 75vh;
 }
 
-/* .twoColumn {
-  margin-top: 10%;
-  margin-right: 5%;
-  float: right;
-} */
-
-/* Clear floats after the columns */
-/* .oneRow:after {
-  content: "";
-  display: table;
-  clear: both;
-} */
+.philosophie{
+  margin-top:30%;
+}
 
 * {
   box-sizing: border-box;
 }
-
-/* body {
-  font-family: Arial, Helvetica, sans-serif;
-  width: 100%;
-  margin: auto;
-} */
 
 .footer {
   /* background-color: rgba(0, 0, 0, 0.3); */
@@ -63,32 +49,6 @@ img{
   text-align: center;
   /* font-size: 12px; */
   padding: 15px;
-}
-
-/* Float four columns side by side */
-/* .column {
-  float: left;
-  margin-top: 10%; */
-      /* margin-left: 4%; */
-  /* width: 25%; */
-  /* margin-top:3%;
-  margin-bottom: 5%; */
-  /* padding: 0 10px;
-} */
-/*
-.column {
-    float: left;
-    height: 60vh;
-    width: 50%;
-    margin-top: 3%;
-    margin-bottom: 5%;
-    padding: 20px;
-    background-color: rgba(0, 0, 0, 0.52);
-} */
-
-/* Remove extra left and right margins, due to padding */
-.row {
-  /* margin: 0 -5px; */
 }
 
 /* Clear floats after the columns */
@@ -103,16 +63,6 @@ img{
   padding: 15px;
   margin-top: 1%;
 }
-
-/* .background {
-  background: url(https://wallpaperaccess.com/full/36414.jpg) no-repeat 50% fixed / cover;
-  width: 100%;
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  background-attachment: fixed;
-} */
 
 body{
     margin: 0px;
@@ -182,7 +132,9 @@ body{
   text-decoration: none;
   color: #000;
   font-family: 'Rock Salt', cursive;
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0,0,0,0.3);
+  text-align: center;
+
 }
 
 .header li a:hover {
@@ -341,8 +293,9 @@ input[type=submit]:hover {
   font-size: 18px;
   margin-top:20%;
   position: relative;
-    left: 150px;
-    bottom: 50px;
+  left: 150px;
+  bottom: 50px;
+  border:3px double;
 }
 
 .kontaktColumn {
@@ -455,6 +408,7 @@ make the two columns stack on top of each other instead of next to each other */
   font-size: 18px;
   margin-top:20%;
     position: unset;
+    border: 4px double;
 }
 
 .kontaktColumn a {
