--- a/speisekarte.css
+++ b/speisekarte.css
@@ -9,7 +9,12 @@
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  padding: 10px;
+  /* padding: 10px; */
+  width: 50%;
+  margin-top: 10%;
+  margin-bottom: 5%;
+  padding-left: 25px;
+  padding-right: 20px;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@@ -20,7 +25,7 @@
   }
 }
 
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+/* The flip card container - set the width and height to whatever you want. */
 .flip-card {
   background-color: transparent;
   width: 300px;
@@ -64,4 +69,227 @@
   background-color: dodgerblue;
   color: white;
   transform: rotateY(180deg);
+}
+
+
+h2{
+  font-size: 30px;
+}
+
+p.dumplings{
+  text-align: center;
+  font-family: 'Dekko', cursive;
+  font-size: 20px;
+  color:white;
+  color: #f4f4f4;
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 300px;
+  position: relative;
+  left: 10px;
+}
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.footer {
+  /* background-color: rgba(0, 0, 0, 0.3); */
+  font-family: 'Dekko', cursive;
+  color: #fff;
+  font-size: 15px;
+  text-align: center;
+  /* font-size: 12px; */
+  padding: 15px;
+}
+
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.headline {
+  background-color: #9933cc;
+  color: #ffffff;
+  padding: 15px;
+  margin-top: 1%;
+}
+
+body{
+    margin: 0px;
+    overflow-x: hidden;
+}
+
+.background{
+  background: url(https://wallpaperaccess.com/full/36414.jpg) no-repeat 50% fixed / cover;
+  /* width: 100%; */
+  /* height: 100vh; */
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  background-attachment: fixed;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  z-index: -2;
+}
+
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 6px;
+  text-align: center;
+  border-radius: 3%;
+  background-color: #f1f1f1;
+}
+
+.header {
+  /* background-color: #fff; */
+    /* background-color: rgba(0, 0, 0, 0.3); */
+  /* box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1); */
+  position: fixed;
+  width: 98.5%;
+  height:16vh;
+  z-index: 3;
+}
+
+.header ul {
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  /* background-color: #fff; */
+}
+
+.header li a {
+  display: block;
+  margin: 2%;
+  padding: 7px 15px;
+  border-style: groove;
+  border-radius: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  /* border-right: 1px solid #f4f4f4; */
+  text-decoration: none;
+  color: #000;
+  font-family: 'Rock Salt', cursive;
+  background-color: rgba(0,0,0,0.3);
+  text-align: center;
+}
+
+.header li a:hover {
+  /* background-color: #f4f4f4; */
+  background-color: rgba(125, 65, 14, 0.3);
+  color: #fff;
+}
+
+.header .logo {
+  display: block;
+  float: left;
+  font-size: 2em;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+.header .menu {
+  clear: both;
+  max-height: 0;
+  transition: max-height .2s ease-out;
+}
+
+.header .menu-icon {
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  padding: 28px 20px;
+  position: relative;
+  user-select: none;
+}
+
+.header .menu-icon .navicon {
+  background: #333;
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background .2s ease-out;
+  width: 18px;
+}
+
+.header .menu-icon .navicon:before,
+.header .menu-icon .navicon:after {
+  background: #333;
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%;
+}
+
+.header .menu-icon .navicon:before {
+  top: 5px;
+}
+
+.header .menu-icon .navicon:after {
+  top: -5px;
+}
+
+.header .menu-btn {
+  display: none;
+}
+
+.header .menu-btn:checked ~ .menu {
+      max-height: 800px;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
+}
+
+@media (min-width: 600px) {
+  .header li {
+    float: left;
+  }
+  .header li a {
+    padding: 7px 15px;
+    background-color: rgba(0,0,0,0.3);
+    text-align: center;
+
+  }
+  .header .menu {
+    clear: none;
+    float: right;
+    max-height: none;
+  }
+  .header .menu-icon {
+    display: none;
+  }
+
+  .header li a:hover {
+    /* background-color: #f4f4f4; */
+    background-color: rgba(125, 65, 14, 0.3);
+    color: #fff;
+}
+
+  .flip-card{
+    margin-top: 5%;
+    /* margin-bottom: 5%; */
+  }
+  /* p{
+    text-align: center;
+  } */
 }
