--- a/main.css
+++ b/main.css
@@ -1,12 +1,17 @@
 
 h2{
   font-size: 30px;
+  font-family: 'Dekko', cursive;
+}
+
+h3{
+    font-family: 'Dekko', cursive;
 }
 
 #overlap {
   font-size: 40px;
   position: absolute;
-  z-index: 4;
+  z-index: 1;
   right: 350px;
   bottom: 100px;
   background-color: rgba(0, 0, 0, 0.3);
@@ -376,10 +381,12 @@ make the two columns stack on top of each other instead of next to each other */
 
   #overlap {
     font-size: 40;
+    top: 150px;
     position: absolute;
-    z-index: 4;
+    z-index: 1;
     right: 1px;
-      bottom: 200px;
+    bottom: 300px;
+
     background-color: rgba(0, 0, 0, 0.3);
     padding: 5%;
     margin-right:
