--- a/speisekarte.css
+++ b/speisekarte.css
@@ -15,6 +15,7 @@
   margin-bottom: 5%;
   padding-left: 25px;
   padding-right: 20px;
+  margin-left: 1%;
 }
 
 .dumpColumn{
@@ -24,7 +25,7 @@
     font-family: 'Dekko', cursive;
     color: #fff;
     font-size: 30px;
-    /* background-color: rgba(0,0,0,0.3) */
+    background-color: rgba(0,0,0,0.3);
     /* margin-bottom: 5%; */
 }
 
@@ -72,7 +73,7 @@
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
   background-color: #bbb;
-  color: black;
+  color: #fff;
 }
 
 /* Style the back side */
@@ -301,15 +302,15 @@ body{
     margin-top: 5%;
     /* margin-bottom: 5%; */
   }
-
+}
 @media screen and (max-width: 600px) {
   .dumpColumn {
     width: 100%;
     text-align: center;
-    margin-top: 17%;
+    margin-top: 25%;
     font-family: 'Dekko', cursive;
     color: #fff;
-    font-size: 15px;
+    /* font-size: 15px; */
     /* margin-bottom: 5%; */
 }
 }
