--- a/reservierung.css
+++ b/reservierung.css
@@ -94,6 +94,7 @@ body{
   padding: 0;
   list-style: none;
   overflow: hidden;
+  /* background-color:#9f9a94ba; */
   /* background-color: #fff; */
 }
 
@@ -176,6 +177,8 @@ body{
 
 .header .menu-btn:checked ~ .menu {
       max-height: 800px;
+      background-color: #9f9a94ba;
+      
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon {
@@ -211,6 +214,12 @@ body{
   }
   .header .menu-icon {
     display: none;
+  }
+
+  .header li a:hover {
+    /* background-color: #f4f4f4; */
+    background-color: rgba(125, 65, 14, 0.3);
+    color: #fff;
   }
 }
 
