--- a/main.css
+++ b/main.css
@@ -115,6 +115,7 @@ body{
   padding: 0;
   list-style: none;
   overflow: hidden;
+  /* background-color:#9f9a94ba; */
   /* background-color: #fff; */
 }
 
@@ -197,6 +198,7 @@ body{
 
 .header .menu-btn:checked ~ .menu {
       max-height: 800px;
+      background-color: #9f9a94ba;
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon {
@@ -220,6 +222,14 @@ body{
   .header li {
     float: left;
   }
+
+  .header ul {
+    padding: 0;
+    list-style: none;
+    overflow: hidden;
+    /* background-color: #9f9a94ba; */
+  }
+
   .header li a {
     padding: 7px 15px;
   }
@@ -231,6 +241,12 @@ body{
   }
   .header .menu-icon {
     display: none;
+  }
+
+  .header li a:hover {
+    /* background-color: #f4f4f4; */
+    background-color: rgba(125, 65, 14, 0.3);
+    color: #fff;
   }
 }
 
@@ -390,6 +406,13 @@ make the two columns stack on top of each other instead of next to each other */
     animation: mymove 20s infinite;
     animation-delay: 2s;
   }
+
+
+  @keyframes mymove {
+    from {right: 0px;}
+    to {leftt: 100px;}
+  }
+
 
   img {
     /* margin-right: 3%; */
